# ARC-AGI-EXT

./: .gitignore  Tasks.md  pyproject.toml  requirements.txt
apps/: app.py
apps/js/: testing_interface_ext.js
scripts/: generate.py  run.sh  tasks.py  utils.py
xarc/: __init__.py  generate.py  main.py  tasks.py  utils.py
