[tool.poetry]
name = "xarc"
version = "0.1.0"
description = "Package for generating synthetic data with tasks similar to the ones present in ARC AGI dataset."
authors = ["Tejas Kasetty <tejas.kasetty@mila.quebec>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.0.1"
beartype = "^0.18.5"
torch = "^2.3.1"
flask = "^3.0.3"
flask-cors = "^4.0.1"
tqdm = "^4.66.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
